[package]
name = "rrmap"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "multi-threaded",
  "x11",
  "webgl2",
] }
bevy_egui = "0.27.0"
bevy_prototype_lyon = "0.11.0"
egui = "0.27.2"
egui_dock = "0.12.0"
serde = { version = "1.0.199", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

